change for cadens picture

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,7 +48,7 @@
         <div class='contact-wrapper'>
             <div class='personal-contact'>
                 <h2>Caden Ellis</h2>
-                <img src="../img/caden.JPG">
+                <img src="../img/caden.jpg">
                 <br>
                 <ul>
                     <li><a href="caden.ellis77+website@gmail.com">Email</a></li>
