Compressed all images
Signed-off-by: Courtney Ellis <courtneycaloca@gmail.com>

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <!-- Javascript -->
+    <script src="../js/getQuotes.js"></script>
+
     <title>The Ellis' - Blog</title>
 </head>
 
@@ -47,6 +50,14 @@
         <div class="container">
             <div class="row">
                 <div class="col blog-preview">
+                    <h2>Quote of the Day</h2>
+                    <br>
+                    <p id="quote"></p>
+                    <p id="author"></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col blog-preview">
                     <h2>First Blog Post</h2>
                     <br>
                     <p>This is the first blog post on our new website. We are so excited about this! Caden has always
@@ -57,7 +68,6 @@
                     </p>
                 </div>
             </div>
-
         </div>
         <!-- Footer -->
         <div class='footer'>
