Creative Project 2 (JS)

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="stylesheet" href="../css/styles.css" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -14,12 +15,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <!-- Javascript -->
-    <script src="../js/getQuotes.js"></script>
+    <script src="../js/getQuotes.js" async></script>
 
     <title>The Ellis' - Blog</title>
 </head>
 
-<body>
+<body onload="getQuote()">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="../index.html">The Ellis'</a>
@@ -49,8 +50,7 @@
         <h1 class="page-header">Blog</h1>
         <div class="container">
             <div class="row">
-                <div class="col blog-preview">
-                    <h2>Quote of the Day</h2>
+                <div class="col quote-of-day">
                     <br>
                     <p id="quote"></p>
                     <p id="author"></p>
