--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="stylesheet" href="../css/styles.css" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -50,6 +51,7 @@
                 <h2>Caden Ellis</h2>
                 <img src="../img/caden.jpg">
                 <br>
+                <br>
                 <ul>
                     <li><a href="caden.ellis77+website@gmail.com">Email</a></li>
                     <li><a href="https://www.facebook.com/caden.ellis.98">Facebook</a></li>
@@ -61,6 +63,7 @@
             <div class='personal-contact'>
                 <h2>Courtney Ellis</h2>
                 <img src="../img/courtney.jpg">
+                <br>
                 <br>
                 <ul>
                     <li><a href="courtneycaloca@gmail+website.com">Email</a></li>
